[package]
name = "smokers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.8"
serde = { version = "1", features = [ "derive" ] }
thiserror = "1"
clap = { version = "3", features = [ "derive", "cargo" ] }
treediff = "4"